--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native-keyboard-spacer": "^0.4.6",
     "expo": "~50.0.6",
+    "expo-av": "~13.10.5",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
@@ -31,11 +34,13 @@
     "react-native": "0.73.4",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-use-precision-timer": "^3.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
