--- a/package.json
+++ b/package.json
@@ -14,24 +14,27 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
     "@types/react-native-keyboard-spacer": "^0.4.6",
-    "expo": "~50.0.6",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "^50.0.14",
     "expo-av": "~13.10.5",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.7",
+    "expo-permissions": "^14.4.0",
+    "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
     "native-base": "^3.4.28",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -46,7 +49,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.3.1",
-    "jest-expo": "^50.0.0",
+    "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.0"
   },
