--- a/app.json
+++ b/app.json
@@ -34,6 +34,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "e96702f7-8219-48a0-9400-e708c04da50b"
+      }
     }
   }
 }
