--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint app/**/*.tsx",
+    "lint:fix": "eslint app/**/*.tsx --fix"
   },
   "jest": {
     "preset": "jest-expo"
@@ -48,8 +50,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "eslint": "^8.57.0",
+    "eslint-config-universe": "^12.0.0",
     "jest": "^29.3.1",
     "jest-expo": "~50.0.4",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.0"
   },
