--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
@@ -46,7 +47,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "react-use-precision-timer": "^3.5.5"
+    "react-use-precision-timer": "^3.5.5",
+    "expo-apple-authentication": "~6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
