fix: replace native base modal from routine view

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "gravity_grit",
+    "name": "Repes",
     "slug": "gravity_grit",
     "version": "1.0.0",
     "orientation": "portrait",
