--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "react-use-precision-timer": "^3.5.5"
+    "react-use-precision-timer": "^3.5.5",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
