--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.14",
     "expo-av": "~13.10.5",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
     "expo-permissions": "^14.4.0",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
+    "js-levenshtein": "^1.1.6",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
@@ -49,8 +51,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-web": "~0.19.6",
-    "react-use-precision-timer": "^3.5.5",
-    "expo-dev-client": "~3.3.11"
+    "react-use-precision-timer": "^3.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
