style: update colors and logo

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Repes",
-    "slug": "gravity_grit",
+    "name": "Taurea",
+    "slug": "taurea",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
