--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.0.2",
     "@types/react-native-keyboard-spacer": "^0.4.6",
+    "algoliasearch": "^4.24.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^50.0.14",
     "expo-av": "~13.10.5",
@@ -39,6 +40,7 @@
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-instantsearch-core": "^7.12.0",
     "react-native": "0.73.6",
     "react-native-collapsible": "^1.6.1",
     "react-native-draggable-flatlist": "^4.0.1",
