feat: Add basic localization support

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-localization": "^15.0.3",
     "expo-permissions": "^14.4.0",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
@@ -35,6 +36,7 @@
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.8.0",
+    "i18n-js": "^4.4.3",
     "js-levenshtein": "^1.1.6",
     "native-base": "^3.4.28",
     "patch-package": "^8.0.0",
