--- a/package.json
+++ b/package.json
@@ -16,57 +16,60 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-picker/picker": "^2.6.1",
-    "@react-navigation/native": "^6.0.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.8",
     "@types/react-native-keyboard-spacer": "^0.4.6",
     "algoliasearch": "^4.24.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^50.0.14",
-    "expo-av": "~13.10.5",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-localization": "^15.0.3",
+    "expo": "^54.0.31",
+    "expo-av": "~16.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-localization": "~17.0.8",
     "expo-permissions": "^14.4.0",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "firebase": "^10.8.0",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
+    "firebase": "9.23.0",
     "i18n-js": "^4.4.3",
     "js-levenshtein": "^1.1.6",
     "native-base": "^3.4.28",
+    "normalize-css-color": "^1.0.2",
     "patch-package": "^8.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-instantsearch-core": "^7.12.0",
-    "react-native": "0.73.6",
+    "react-native": "0.81.5",
     "react-native-collapsible": "^1.6.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.2",
     "react-use-precision-timer": "^3.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.1.10",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.0",
     "jest": "^29.3.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~54.0.16",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.3.0"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
